Refactors entity strategy to descriptor
Renames the `WooCommerceEntityStrategy` to `WooCommerceEntityDescriptor` to better reflect its role in providing metadata about entities, rather than implementing a specific behavior.

This change clarifies the purpose of the interface and improves the overall design by decoupling the entity description from any specific strategy implementation.